--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: For The Win
+title: B.R.I.D.G.E.S>
 email: noThanks.com
 description: "This is testing my awesome"
 baseurl: ""
