--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: B.R.I.D.G.E.S>
+title: B.R.I.D.G.E.S.
 email: noThanks.com
-description: "This is testing my awesome"
+description: "Bridging Real-world Infastructure Designed to Goal-align, Engage, and Stimulate."
 baseurl: ""
 url: "win.com"
 
